correct github link

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
       <td align=center width=640px>
         <center>
           <div class="rectangle">
-            <a href='.' class="github-link">Code</a>
+            <a href='https://github.com/Mehdi0xC/clic' class="github-link">Code</a>
           </div>
         </center>
       </td>
