update arxiv link

--- a/index.html
+++ b/index.html
@@ -376,16 +376,23 @@
 
 
 
-  <table align=center width=200px style="margin-top: 5%">
+  <table align=center width=700px style="margin-top: 5%">
     <tr>
-      <td align=center width=640px>
+      <td align=center width=40px>
         <center>
           <div class="rectangle">
-            <a href='./resources/paper.pdf' class="github-link">Paper</a>
+            <a href='./resources/paper.pdf' class="github-link">Paper (PDF)</a>
           </div>
         </center>
       </td>
-      <td align=center width=640px>
+      <td align=center width=40px>
+        <center>
+          <div class="rectangle">
+            <a href='http://arxiv.org/abs/2311.17083' class="github-link">Paper (ArXiv)</a>
+          </div>
+        </center>
+      </td>
+      <td align=center width=40px>
         <center>
           <div class="rectangle">
             <a href='https://github.com/Mehdi0xC/clic' class="github-link">Code</a>
@@ -416,7 +423,7 @@
 <table align=center width=850px>
   <center><h2>Abstract</h2></center>
   <tr>
-    <td>
+    <td style="font-size: 18px;">
       This paper addresses the challenge of learning a local visual pattern of an object from one image, and generating images depicting objects with that pattern. Learning a localized concept
       and placing it on an object in a target image is a nontrivial task, as the objects may have different orientations and shapes. Our approach builds upon recent advancements in visual concept learning.
       It involves acquiring a visual concept (e.g., an ornament) from a source image and subsequently applying it to an object (e.g., a chair) in a target image. Our key idea is to perform in-context concept learning,
